fix overflow x-axis

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -23,6 +23,7 @@ html {
     min-height: 100vh;
     padding-left: 160px;
     padding-right: 160px;
+    overflow-x: hidden;
 
     input {
       font-family: Aeonik;
